// This file was autogenerated by ~/scripts/generateTests.js and should not be modified.

import { BlockParser } from "../../../parser/BlockParser";
import { Document } from "../../../nodes/Document";
import { SnapshotSerializer } from "../../../parser/__tests__/serializers";

expect.addSnapshotSerializer(SnapshotSerializer.serializer);

function parse(text: string): Document {
    const parser: BlockParser = new BlockParser(text, undefined, false);
    return parser.parse();
}

it.each`
    tagName
    ${"@a"}
    ${"@ab"}
    ${"@a_"}
    ${"@a9"}
    ${"@a_9"}
`("DocBlockTag: $tagName", ({ tagName }: { tagName: string }) => {
    const document: Document = parse(tagName);
    expect(document).toMatchSnapshot();
});

